k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: driftly-app
  namespace: driftly
  labels:
    app.kubernetes.io/name: driftly-app
    app.kubernetes.io/part-of: driftly
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: driftly-app
  ports:
    - name: http
      port: 3000
      targetPort: http
      nodePort: 30000
      protocol: TCP
